# rbxrbx

./: CMakeLists.txt  README.md  extern.rar  rbxrbx.cpp
include/: ntdll.h  processScanner.h  procmemory.h  rbxclient.h
include/Roblox/: info.h  instance.h  offsets.h  tools.h  types.h
lib/: zstd.lib
src/: external.cpp  internal.cpp  ntdll.cpp  processScanner.cpp  procmemory.cpp
src/Roblox/: instance.cpp  tools.cpp
